// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly with no props 1`] = `
<div>
  <label>
    <input
      style={
        Object {
          "display": "block",
        }
      }
    />
  </label>
</div>
`;

exports[`Select renders correctly with no props 1`] = `
<label
  style={
    Object {
      "display": "block",
    }
  }
>
  <select
    style={
      Object {
        "display": "block",
      }
    }
  />
</label>
`;
